# pylaroid

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.rst  requirements.txt  setup.cfg
pylaroid/: __init__.py  console_script.py  file_handler.py  models.py  pdf.py  polaroid.py
requirements.d/: dev.txt  travis.txt
tests/: test_cli.py
