;;
;; pylaroid package
;;
[metadata]
name = pylaroid
version =0.0.6
description = Fake self-developing film generator
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Philippe Lafaye
author_email = rage2000@gmail.com

[options]
include_package_data = True
install_requires =
    argh
    click
    pathtools
    pillow
    reportlab
    wand
    watchdog
packages = find:
zip_safe = True

[options.entry_points]
console_scripts =
    pylaroid = pylaroid.console_script:cli_frontend

[options.extras_require]
dev =
    flake8
    pytest
    sphinx
    sphinx-rtd-theme
    sphinx-autobuild

[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,

[tool:pytest]
addopts = -vv --cov=pylaroid
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py27, py35

[testenv]
commands =
    pip install -e .[dev]
    pytest -vv tests
